fixed proper bg on whitespace area

--- a/public/assets/css/guestpagesCss/guestPages.scss
+++ b/public/assets/css/guestpagesCss/guestPages.scss
@@ -13,7 +13,7 @@
 }
 .swiper {
     width: 70%;
-    margin-top: -32vh !important;
+    margin-top: -32vh;
     margin-bottom: 22vh !important;
     // margin: auto;
     padding-top: 50px;
@@ -22,6 +22,11 @@
     // background:red;
     padding:0;
     // margin: 0;
+    @media not all and (min-width: 500px) {
+        // margin-top: 0vh !important;
+        // background:red;
+        width: 100%;
+    }
 }
 
 .swiper-slide {
@@ -49,6 +54,26 @@
     margin:auto;
 }
 
+.whitespace{
+    // between gallery and aboutus
+    background-color:transparent;
+    margin-bottom:-15vh;
+    @media not all and (min-width: 900px) {
+        // background:linear-gradient(45deg,#080808,#808080);
+        #backgroundImage{
+            // display:none;
+            width: 900px !important;
+        }
+    }
+    #backgroundImage{
+        z-index: -5;
+        position: fixed;
+        top:-70vh;
+        left: 0;
+        width: 100%;
+        
+    }
+}
 
 
 
@@ -93,6 +118,7 @@
     position: relative;
     padding:0  !important;
     width: 100% !important;
+    margin-top: -10vh !important;
     
     .image {
         margin-left: 0 !important;
